# bio-run-crate

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md  data-model.md  project-charter.md  roadmap.md  security-and-privacy.md
docs/decisions/: ADR-0001-use-python.md  ADR-0002-use-ro-crate-1.2.md  ADR-0003-profile-based-validation.md
examples/: run_manifest.yaml
examples/synthetic/: invalid-run.yaml  valid-run.yaml
planning/github/: README.md  issues.tsv
planning/github/issues/: 01-project-charter.md  02-minimal-cli.md  03-run-manifest-model.md  04-synthetic-manifests.md  05-validation-findings.md  06-yaml-validation-command.md  07-json-report.md  08-markdown-report.md  09-minimal-ro-crate.md  10-import-nf-prov.md  11-spatial-profile.md  12-continuous-integration.md  13-secret-scanning.md  14-beginner-tutorial.md  15-version-0-1-demo.md
scripts/: create_github_issues.sh  create_github_labels.sh  create_github_milestone.sh
src/bio_run_crate/: __init__.py  __main__.py  cli.py  manifest.py  models.py
tests/: test_cli.py  test_manifest.py  test_models.py
