[project]
name = "bio-run-crate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ron Finn", email = "28505981+ronfinn@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "rocrate>=0.15.1",
    "typer>=0.27.0",
]

[project.scripts]
bio-run-crate = "bio_run_crate.cli:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.0",
]
